api,cmd: add metrics endpoints
